[package]
name = "webpki-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.webpki]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "cert_der_as_trust_anchor"
path = "fuzz_targets/cert_der_as_trust_anchor.rs"
test = false
doc = false

[profile.release]
debug = true
